Updating Redis to support development mode